# UBL-Agreements-Cloudflare

./: .gitignore  Blueprint.md  TASKLIST.md
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: canonicalization.rs  context.rs  decision.rs  error.rs  evaluator.rs  hash.rs  lib.rs  parser.rs  policy.rs  types.rs  wasm.rs
policies/: ubl_core_v1.yaml
workers/ubl-mvp1/: package.json  schema.sql  tsconfig.json  wrangler.toml
workers/ubl-mvp1/src/: index.ts
workers/ubl-mvp1/src/durable-objects/: LedgerShardObject.ts  RoomObject.ts  TenantObject.ts  WorkspaceObject.ts  index.ts
workers/ubl-mvp1/src/handlers/: events.ts  index.ts  mcp.ts  messages.ts  receipts.ts  rooms.ts  whoami.ts
workers/ubl-mvp1/src/types/: index.ts
workers/ubl-mvp1/src/utils/: agreements.ts  canon.ts  errors.ts  hash.ts  identity.ts  index.ts  response.ts
