[package]
name = "policy-engine"
version = "0.1.0"
edition = "2021"
authors = ["UBL Team"]
description = "UBL Policy Engine - TDLN policy evaluation for WASM and native"
license = "MIT"
repository = "https://github.com/your-org/ubl-agreements-cloudflare"
keywords = ["policy", "wasm", "cloudflare", "ubl"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# WASM bindings (optional, for wasm target)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Regex for pattern matching
regex = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit for better optimization
strip = true           # Strip symbols

[profile.release.package.policy-engine]
opt-level = "z"        # Maximum size optimization for WASM
